Started refactoring and adding Gamestates
not finished.

--- a/Pong/Pong/Pong.csproj
+++ b/Pong/Pong/Pong.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
+    <Compile Include="Managers\GameStateManager.cs" />
     <Compile Include="PositivePowerups.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="GameWorld.cs" />
