Input helper and button updated
ok

--- a/Pong/Pong/Pong.csproj
+++ b/Pong/Pong/Pong.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Core\DataManager.cs" />
     <Compile Include="Core\GenericDatabase.cs" />
     <Compile Include="Core\GridSpace.cs" />
+    <Compile Include="Core\Input.cs" />
     <Compile Include="Core\UI.cs" />
     <Compile Include="Objects\Ball.cs" />
     <Compile Include="Core\GameObjectManager.cs" />
