--- a/Pong/Pong/Pong.csproj
+++ b/Pong/Pong/Pong.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Core\GenericDatabase.cs" />
     <Compile Include="Core\GridSpace.cs" />
     <Compile Include="Core\Input.cs" />
+    <Compile Include="Core\ParticleEmitter.cs" />
     <Compile Include="Core\UI.cs" />
     <Compile Include="Objects\Ball.cs" />
     <Compile Include="Core\GameObjectManager.cs" />
