--- a/Pong/Pong/Pong.csproj
+++ b/Pong/Pong/Pong.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Core\Input.cs" />
     <Compile Include="Core\ParticleEmitter.cs" />
     <Compile Include="Core\UI.cs" />
+    <Compile Include="Objects\AutoPaddle.cs" />
     <Compile Include="Objects\Ball.cs" />
     <Compile Include="Core\GameObjectManager.cs" />
     <Compile Include="Core\GameStateManager.cs" />
